Part A/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment
Rule 5     statement -> function_definition
Rule 6     statement -> if_statement
Rule 7     statement -> return_statement
Rule 8     statement -> print_statement
Rule 9     statement -> expression SEMICOLON
Rule 10    assignment -> ID ASSIGN expression SEMICOLON
Rule 11    function_definition -> DEF ID LPAREN function_args RPAREN LBRACE statements RBRACE
Rule 12    function_args -> function_args COMMA ID
Rule 13    function_args -> ID
Rule 14    function_args -> empty
Rule 15    function_call -> ID LPAREN function_call_args RPAREN
Rule 16    function_call_args -> function_call_args COMMA expression
Rule 17    function_call_args -> expression
Rule 18    function_call_args -> empty
Rule 19    if_statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE
Rule 20    if_statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 21    return_statement -> RETURN expression SEMICOLON
Rule 22    lambda_expression -> LAMBDA LPAREN function_args RPAREN COLON LBRACE statements RBRACE LPAREN function_call_args RPAREN
Rule 23    print_statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 24    expression -> NUMBER
Rule 25    expression -> ID
Rule 26    expression -> TRUE
Rule 27    expression -> FALSE
Rule 28    expression -> LPAREN expression RPAREN
Rule 29    expression -> expression PLUS expression
Rule 30    expression -> expression MINUS expression
Rule 31    expression -> expression MULT expression
Rule 32    expression -> expression DIV expression
Rule 33    expression -> expression MOD expression
Rule 34    expression -> expression GT expression
Rule 35    expression -> expression LT expression
Rule 36    expression -> expression GE expression
Rule 37    expression -> expression LE expression
Rule 38    expression -> expression EQ expression
Rule 39    expression -> expression NE expression
Rule 40    expression -> expression AND expression
Rule 41    expression -> expression OR expression
Rule 42    expression -> NOT expression
Rule 43    expression -> MINUS expression
Rule 44    expression -> function_call
Rule 45    expression -> lambda_expression
Rule 46    empty -> <empty>

Terminals, with rules where they appear

AND                  : 40
ASSIGN               : 10
COLON                : 22
COMMA                : 12 16
DEF                  : 11
DIV                  : 32
ELSE                 : 20
EQ                   : 38
FALSE                : 27
GE                   : 36
GT                   : 34
ID                   : 10 11 12 13 15 25
IF                   : 19 20
LAMBDA               : 22
LBRACE               : 11 19 20 20 22
LE                   : 37
LPAREN               : 11 15 19 20 22 22 23 28
LT                   : 35
MINUS                : 30 43
MOD                  : 33
MULT                 : 31
NE                   : 39
NOT                  : 42
NUMBER               : 24
OR                   : 41
PLUS                 : 29
PRINT                : 23
RBRACE               : 11 19 20 20 22
RETURN               : 21
RPAREN               : 11 15 19 20 22 22 23 28
SEMICOLON            : 9 10 21 23
TRUE                 : 26
error                : 

Nonterminals, with rules where they appear

assignment           : 4
empty                : 14 18
expression           : 9 10 16 17 19 20 21 23 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 43
function_args        : 11 12 22
function_call        : 44
function_call_args   : 15 16 22
function_definition  : 5
if_statement         : 6
lambda_expression    : 45
print_statement      : 8
program              : 0
return_statement     : 7
statement            : 2 3
statements           : 1 2 11 19 20 20 22

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . function_definition
    (6) statement -> . if_statement
    (7) statement -> . return_statement
    (8) statement -> . print_statement
    (9) statement -> . expression SEMICOLON
    (10) assignment -> . ID ASSIGN expression SEMICOLON
    (11) function_definition -> . DEF ID LPAREN function_args RPAREN LBRACE statements RBRACE
    (19) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (20) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (21) return_statement -> . RETURN expression SEMICOLON
    (23) print_statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (24) expression -> . NUMBER
    (25) expression -> . ID
    (26) expression -> . TRUE
    (27) expression -> . FALSE
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression MULT expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression GT expression
    (35) expression -> . expression LT expression
    (36) expression -> . expression GE expression
    (37) expression -> . expression LE expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NE expression
    (40) expression -> . expression AND expression
    (41) expression -> . expression OR expression
    (42) expression -> . NOT expression
    (43) expression -> . MINUS expression
    (44) expression -> . function_call
    (45) expression -> . lambda_expression
    (15) function_call -> . ID LPAREN function_call_args RPAREN
    (22) lambda_expression -> . LAMBDA LPAREN function_args RPAREN COLON LBRACE statements RBRACE LPAREN function_call_args RPAREN

    ID              shift and go to state 10
    DEF             shift and go to state 11
    IF              shift and go to state 13
    RETURN          shift and go to state 14
    PRINT           shift and go to state 15
    NUMBER          shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    LPAREN          shift and go to state 12
    NOT             shift and go to state 20
    MINUS           shift and go to state 19
    LAMBDA          shift and go to state 23

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    function_definition            shift and go to state 5
    if_statement                   shift and go to state 6
    return_statement               shift and go to state 7
    print_statement                shift and go to state 8
    expression                     shift and go to state 9
    function_call                  shift and go to state 21
    lambda_expression              shift and go to state 22

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment
    (5) statement -> . function_definition
    (6) statement -> . if_statement
    (7) statement -> . return_statement
    (8) statement -> . print_statement
    (9) statement -> . expression SEMICOLON
    (10) assignment -> . ID ASSIGN expression SEMICOLON
    (11) function_definition -> . DEF ID LPAREN function_args RPAREN LBRACE statements RBRACE
    (19) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (20) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (21) return_statement -> . RETURN expression SEMICOLON
    (23) print_statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (24) expression -> . NUMBER
    (25) expression -> . ID
    (26) expression -> . TRUE
    (27) expression -> . FALSE
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression MULT expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression GT expression
    (35) expression -> . expression LT expression
    (36) expression -> . expression GE expression
    (37) expression -> . expression LE expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NE expression
    (40) expression -> . expression AND expression
    (41) expression -> . expression OR expression
    (42) expression -> . NOT expression
    (43) expression -> . MINUS expression
    (44) expression -> . function_call
    (45) expression -> . lambda_expression
    (15) function_call -> . ID LPAREN function_call_args RPAREN
    (22) lambda_expression -> . LAMBDA LPAREN function_args RPAREN COLON LBRACE statements RBRACE LPAREN function_call_args RPAREN

    $end            reduce using rule 1 (program -> statements .)
    ID              shift and go to state 10
    DEF             shift and go to state 11
    IF              shift and go to state 13
    RETURN          shift and go to state 14
    PRINT           shift and go to state 15
    NUMBER          shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    LPAREN          shift and go to state 12
    NOT             shift and go to state 20
    MINUS           shift and go to state 19
    LAMBDA          shift and go to state 23

    statement                      shift and go to state 24
    assignment                     shift and go to state 4
    function_definition            shift and go to state 5
    if_statement                   shift and go to state 6
    return_statement               shift and go to state 7
    print_statement                shift and go to state 8
    expression                     shift and go to state 9
    function_call                  shift and go to state 21
    lambda_expression              shift and go to state 22

state 3

    (3) statements -> statement .

    ID              reduce using rule 3 (statements -> statement .)
    DEF             reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    TRUE            reduce using rule 3 (statements -> statement .)
    FALSE           reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    NOT             reduce using rule 3 (statements -> statement .)
    MINUS           reduce using rule 3 (statements -> statement .)
    LAMBDA          reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> assignment .

    ID              reduce using rule 4 (statement -> assignment .)
    DEF             reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    RETURN          reduce using rule 4 (statement -> assignment .)
    PRINT           reduce using rule 4 (statement -> assignment .)
    NUMBER          reduce using rule 4 (statement -> assignment .)
    TRUE            reduce using rule 4 (statement -> assignment .)
    FALSE           reduce using rule 4 (statement -> assignment .)
    LPAREN          reduce using rule 4 (statement -> assignment .)
    NOT             reduce using rule 4 (statement -> assignment .)
    MINUS           reduce using rule 4 (statement -> assignment .)
    LAMBDA          reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    RBRACE          reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> function_definition .

    ID              reduce using rule 5 (statement -> function_definition .)
    DEF             reduce using rule 5 (statement -> function_definition .)
    IF              reduce using rule 5 (statement -> function_definition .)
    RETURN          reduce using rule 5 (statement -> function_definition .)
    PRINT           reduce using rule 5 (statement -> function_definition .)
    NUMBER          reduce using rule 5 (statement -> function_definition .)
    TRUE            reduce using rule 5 (statement -> function_definition .)
    FALSE           reduce using rule 5 (statement -> function_definition .)
    LPAREN          reduce using rule 5 (statement -> function_definition .)
    NOT             reduce using rule 5 (statement -> function_definition .)
    MINUS           reduce using rule 5 (statement -> function_definition .)
    LAMBDA          reduce using rule 5 (statement -> function_definition .)
    $end            reduce using rule 5 (statement -> function_definition .)
    RBRACE          reduce using rule 5 (statement -> function_definition .)


state 6

    (6) statement -> if_statement .

    ID              reduce using rule 6 (statement -> if_statement .)
    DEF             reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    RETURN          reduce using rule 6 (statement -> if_statement .)
    PRINT           reduce using rule 6 (statement -> if_statement .)
    NUMBER          reduce using rule 6 (statement -> if_statement .)
    TRUE            reduce using rule 6 (statement -> if_statement .)
    FALSE           reduce using rule 6 (statement -> if_statement .)
    LPAREN          reduce using rule 6 (statement -> if_statement .)
    NOT             reduce using rule 6 (statement -> if_statement .)
    MINUS           reduce using rule 6 (statement -> if_statement .)
    LAMBDA          reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> return_statement .

    ID              reduce using rule 7 (statement -> return_statement .)
    DEF             reduce using rule 7 (statement -> return_statement .)
    IF              reduce using rule 7 (statement -> return_statement .)
    RETURN          reduce using rule 7 (statement -> return_statement .)
    PRINT           reduce using rule 7 (statement -> return_statement .)
    NUMBER          reduce using rule 7 (statement -> return_statement .)
    TRUE            reduce using rule 7 (statement -> return_statement .)
    FALSE           reduce using rule 7 (statement -> return_statement .)
    LPAREN          reduce using rule 7 (statement -> return_statement .)
    NOT             reduce using rule 7 (statement -> return_statement .)
    MINUS           reduce using rule 7 (statement -> return_statement .)
    LAMBDA          reduce using rule 7 (statement -> return_statement .)
    $end            reduce using rule 7 (statement -> return_statement .)
    RBRACE          reduce using rule 7 (statement -> return_statement .)


state 8

    (8) statement -> print_statement .

    ID              reduce using rule 8 (statement -> print_statement .)
    DEF             reduce using rule 8 (statement -> print_statement .)
    IF              reduce using rule 8 (statement -> print_statement .)
    RETURN          reduce using rule 8 (statement -> print_statement .)
    PRINT           reduce using rule 8 (statement -> print_statement .)
    NUMBER          reduce using rule 8 (statement -> print_statement .)
    TRUE            reduce using rule 8 (statement -> print_statement .)
    FALSE           reduce using rule 8 (statement -> print_statement .)
    LPAREN          reduce using rule 8 (statement -> print_statement .)
    NOT             reduce using rule 8 (statement -> print_statement .)
    MINUS           reduce using rule 8 (statement -> print_statement .)
    LAMBDA          reduce using rule 8 (statement -> print_statement .)
    $end            reduce using rule 8 (statement -> print_statement .)
    RBRACE          reduce using rule 8 (statement -> print_statement .)


state 9

    (9) statement -> expression . SEMICOLON
    (29) expression -> expression . PLUS expression
    (30) expression -> expression . MINUS expression
    (31) expression -> expression . MULT expression
    (32) expression -> expression . DIV expression
    (33) expression -> expression . MOD expression
    (34) expression -> expression . GT expression
    (35) expression -> expression . LT expression
    (36) expression -> expression . GE expression
    (37) expression -> expression . LE expression
    (38) expression -> expression . EQ expression
    (39) expression -> expression . NE expression
    (40) expression -> expression . AND expression
    (41) expression -> expression . OR expression

    SEMICOLON       shift and go to state 25
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    MULT            shift and go to state 28
    DIV             shift and go to state 29
    MOD             shift and go to state 30
    GT              shift and go to state 31
    LT              shift and go to state 32
    GE              shift and go to state 33
    LE              shift and go to state 34
    EQ              shift and go to state 35
    NE              shift and go to state 36
    AND             shift and go to state 37
    OR              shift and go to state 38


state 10

    (10) assignment -> ID . ASSIGN expression SEMICOLON
    (25) expression -> ID .
    (15) function_call -> ID . LPAREN function_call_args RPAREN

    ASSIGN          shift and go to state 39
    SEMICOLON       reduce using rule 25 (expression -> ID .)
    PLUS            reduce using rule 25 (expression -> ID .)
    MINUS           reduce using rule 25 (expression -> ID .)
    MULT            reduce using rule 25 (expression -> ID .)
    DIV             reduce using rule 25 (expression -> ID .)
    MOD             reduce using rule 25 (expression -> ID .)
    GT              reduce using rule 25 (expression -> ID .)
    LT              reduce using rule 25 (expression -> ID .)
    GE              reduce using rule 25 (expression -> ID .)
    LE              reduce using rule 25 (expression -> ID .)
    EQ              reduce using rule 25 (expression -> ID .)
    NE              reduce using rule 25 (expression -> ID .)
    AND             reduce using rule 25 (expression -> ID .)
    OR              reduce using rule 25 (expression -> ID .)
    LPAREN          shift and go to state 40


state 11

    (11) function_definition -> DEF . ID LPAREN function_args RPAREN LBRACE statements RBRACE

    ID              shift and go to state 41


state 12

    (28) expression -> LPAREN . expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . ID
    (26) expression -> . TRUE
    (27) expression -> . FALSE
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression MULT expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression GT expression
    (35) expression -> . expression LT expression
    (36) expression -> . expression GE expression
    (37) expression -> . expression LE expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NE expression
    (40) expression -> . expression AND expression
    (41) expression -> . expression OR expression
    (42) expression -> . NOT expression
    (43) expression -> . MINUS expression
    (44) expression -> . function_call
    (45) expression -> . lambda_expression
    (15) function_call -> . ID LPAREN function_call_args RPAREN
    (22) lambda_expression -> . LAMBDA LPAREN function_args RPAREN COLON LBRACE statements RBRACE LPAREN function_call_args RPAREN

    NUMBER          shift and go to state 16
    ID              shift and go to state 43
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    LPAREN          shift and go to state 12
    NOT             shift and go to state 20
    MINUS           shift and go to state 19
    LAMBDA          shift and go to state 23

    expression                     shift and go to state 42
    function_call                  shift and go to state 21
    lambda_expression              shift and go to state 22

state 13

    (19) if_statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE
    (20) if_statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE

    LPAREN          shift and go to state 44


state 14

    (21) return_statement -> RETURN . expression SEMICOLON
    (24) expression -> . NUMBER
    (25) expression -> . ID
    (26) expression -> . TRUE
    (27) expression -> . FALSE
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression MULT expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression GT expression
    (35) expression -> . expression LT expression
    (36) expression -> . expression GE expression
    (37) expression -> . expression LE expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NE expression
    (40) expression -> . expression AND expression
    (41) expression -> . expression OR expression
    (42) expression -> . NOT expression
    (43) expression -> . MINUS expression
    (44) expression -> . function_call
    (45) expression -> . lambda_expression
    (15) function_call -> . ID LPAREN function_call_args RPAREN
    (22) lambda_expression -> . LAMBDA LPAREN function_args RPAREN COLON LBRACE statements RBRACE LPAREN function_call_args RPAREN

    NUMBER          shift and go to state 16
    ID              shift and go to state 43
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    LPAREN          shift and go to state 12
    NOT             shift and go to state 20
    MINUS           shift and go to state 19
    LAMBDA          shift and go to state 23

    expression                     shift and go to state 45
    function_call                  shift and go to state 21
    lambda_expression              shift and go to state 22

state 15

    (23) print_statement -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 46


state 16

    (24) expression -> NUMBER .

    SEMICOLON       reduce using rule 24 (expression -> NUMBER .)
    PLUS            reduce using rule 24 (expression -> NUMBER .)
    MINUS           reduce using rule 24 (expression -> NUMBER .)
    MULT            reduce using rule 24 (expression -> NUMBER .)
    DIV             reduce using rule 24 (expression -> NUMBER .)
    MOD             reduce using rule 24 (expression -> NUMBER .)
    GT              reduce using rule 24 (expression -> NUMBER .)
    LT              reduce using rule 24 (expression -> NUMBER .)
    GE              reduce using rule 24 (expression -> NUMBER .)
    LE              reduce using rule 24 (expression -> NUMBER .)
    EQ              reduce using rule 24 (expression -> NUMBER .)
    NE              reduce using rule 24 (expression -> NUMBER .)
    AND             reduce using rule 24 (expression -> NUMBER .)
    OR              reduce using rule 24 (expression -> NUMBER .)
    RPAREN          reduce using rule 24 (expression -> NUMBER .)
    COMMA           reduce using rule 24 (expression -> NUMBER .)


state 17

    (26) expression -> TRUE .

    SEMICOLON       reduce using rule 26 (expression -> TRUE .)
    PLUS            reduce using rule 26 (expression -> TRUE .)
    MINUS           reduce using rule 26 (expression -> TRUE .)
    MULT            reduce using rule 26 (expression -> TRUE .)
    DIV             reduce using rule 26 (expression -> TRUE .)
    MOD             reduce using rule 26 (expression -> TRUE .)
    GT              reduce using rule 26 (expression -> TRUE .)
    LT              reduce using rule 26 (expression -> TRUE .)
    GE              reduce using rule 26 (expression -> TRUE .)
    LE              reduce using rule 26 (expression -> TRUE .)
    EQ              reduce using rule 26 (expression -> TRUE .)
    NE              reduce using rule 26 (expression -> TRUE .)
    AND             reduce using rule 26 (expression -> TRUE .)
    OR              reduce using rule 26 (expression -> TRUE .)
    RPAREN          reduce using rule 26 (expression -> TRUE .)
    COMMA           reduce using rule 26 (expression -> TRUE .)


state 18

    (27) expression -> FALSE .

    SEMICOLON       reduce using rule 27 (expression -> FALSE .)
    PLUS            reduce using rule 27 (expression -> FALSE .)
    MINUS           reduce using rule 27 (expression -> FALSE .)
    MULT            reduce using rule 27 (expression -> FALSE .)
    DIV             reduce using rule 27 (expression -> FALSE .)
    MOD             reduce using rule 27 (expression -> FALSE .)
    GT              reduce using rule 27 (expression -> FALSE .)
    LT              reduce using rule 27 (expression -> FALSE .)
    GE              reduce using rule 27 (expression -> FALSE .)
    LE              reduce using rule 27 (expression -> FALSE .)
    EQ              reduce using rule 27 (expression -> FALSE .)
    NE              reduce using rule 27 (expression -> FALSE .)
    AND             reduce using rule 27 (expression -> FALSE .)
    OR              reduce using rule 27 (expression -> FALSE .)
    RPAREN          reduce using rule 27 (expression -> FALSE .)
    COMMA           reduce using rule 27 (expression -> FALSE .)


state 19

    (43) expression -> MINUS . expression
    (24) expression -> . NUMBER
    (25) expression -> . ID
    (26) expression -> . TRUE
    (27) expression -> . FALSE
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression MULT expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression GT expression
    (35) expression -> . expression LT expression
    (36) expression -> . expression GE expression
    (37) expression -> . expression LE expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NE expression
    (40) expression -> . expression AND expression
    (41) expression -> . expression OR expression
    (42) expression -> . NOT expression
    (43) expression -> . MINUS expression
    (44) expression -> . function_call
    (45) expression -> . lambda_expression
    (15) function_call -> . ID LPAREN function_call_args RPAREN
    (22) lambda_expression -> . LAMBDA LPAREN function_args RPAREN COLON LBRACE statements RBRACE LPAREN function_call_args RPAREN

    NUMBER          shift and go to state 16
    ID              shift and go to state 43
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    LPAREN          shift and go to state 12
    NOT             shift and go to state 20
    MINUS           shift and go to state 19
    LAMBDA          shift and go to state 23

    expression                     shift and go to state 47
    function_call                  shift and go to state 21
    lambda_expression              shift and go to state 22

state 20

    (42) expression -> NOT . expression
    (24) expression -> . NUMBER
    (25) expression -> . ID
    (26) expression -> . TRUE
    (27) expression -> . FALSE
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression MULT expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression GT expression
    (35) expression -> . expression LT expression
    (36) expression -> . expression GE expression
    (37) expression -> . expression LE expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NE expression
    (40) expression -> . expression AND expression
    (41) expression -> . expression OR expression
    (42) expression -> . NOT expression
    (43) expression -> . MINUS expression
    (44) expression -> . function_call
    (45) expression -> . lambda_expression
    (15) function_call -> . ID LPAREN function_call_args RPAREN
    (22) lambda_expression -> . LAMBDA LPAREN function_args RPAREN COLON LBRACE statements RBRACE LPAREN function_call_args RPAREN

    NUMBER          shift and go to state 16
    ID              shift and go to state 43
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    LPAREN          shift and go to state 12
    NOT             shift and go to state 20
    MINUS           shift and go to state 19
    LAMBDA          shift and go to state 23

    expression                     shift and go to state 48
    function_call                  shift and go to state 21
    lambda_expression              shift and go to state 22

state 21

    (44) expression -> function_call .

    SEMICOLON       reduce using rule 44 (expression -> function_call .)
    PLUS            reduce using rule 44 (expression -> function_call .)
    MINUS           reduce using rule 44 (expression -> function_call .)
    MULT            reduce using rule 44 (expression -> function_call .)
    DIV             reduce using rule 44 (expression -> function_call .)
    MOD             reduce using rule 44 (expression -> function_call .)
    GT              reduce using rule 44 (expression -> function_call .)
    LT              reduce using rule 44 (expression -> function_call .)
    GE              reduce using rule 44 (expression -> function_call .)
    LE              reduce using rule 44 (expression -> function_call .)
    EQ              reduce using rule 44 (expression -> function_call .)
    NE              reduce using rule 44 (expression -> function_call .)
    AND             reduce using rule 44 (expression -> function_call .)
    OR              reduce using rule 44 (expression -> function_call .)
    RPAREN          reduce using rule 44 (expression -> function_call .)
    COMMA           reduce using rule 44 (expression -> function_call .)


state 22

    (45) expression -> lambda_expression .

    SEMICOLON       reduce using rule 45 (expression -> lambda_expression .)
    PLUS            reduce using rule 45 (expression -> lambda_expression .)
    MINUS           reduce using rule 45 (expression -> lambda_expression .)
    MULT            reduce using rule 45 (expression -> lambda_expression .)
    DIV             reduce using rule 45 (expression -> lambda_expression .)
    MOD             reduce using rule 45 (expression -> lambda_expression .)
    GT              reduce using rule 45 (expression -> lambda_expression .)
    LT              reduce using rule 45 (expression -> lambda_expression .)
    GE              reduce using rule 45 (expression -> lambda_expression .)
    LE              reduce using rule 45 (expression -> lambda_expression .)
    EQ              reduce using rule 45 (expression -> lambda_expression .)
    NE              reduce using rule 45 (expression -> lambda_expression .)
    AND             reduce using rule 45 (expression -> lambda_expression .)
    OR              reduce using rule 45 (expression -> lambda_expression .)
    RPAREN          reduce using rule 45 (expression -> lambda_expression .)
    COMMA           reduce using rule 45 (expression -> lambda_expression .)


state 23

    (22) lambda_expression -> LAMBDA . LPAREN function_args RPAREN COLON LBRACE statements RBRACE LPAREN function_call_args RPAREN

    LPAREN          shift and go to state 49


state 24

    (2) statements -> statements statement .

    ID              reduce using rule 2 (statements -> statements statement .)
    DEF             reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    RETURN          reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    NUMBER          reduce using rule 2 (statements -> statements statement .)
    TRUE            reduce using rule 2 (statements -> statements statement .)
    FALSE           reduce using rule 2 (statements -> statements statement .)
    LPAREN          reduce using rule 2 (statements -> statements statement .)
    NOT             reduce using rule 2 (statements -> statements statement .)
    MINUS           reduce using rule 2 (statements -> statements statement .)
    LAMBDA          reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    RBRACE          reduce using rule 2 (statements -> statements statement .)


state 25

    (9) statement -> expression SEMICOLON .

    ID              reduce using rule 9 (statement -> expression SEMICOLON .)
    DEF             reduce using rule 9 (statement -> expression SEMICOLON .)
    IF              reduce using rule 9 (statement -> expression SEMICOLON .)
    RETURN          reduce using rule 9 (statement -> expression SEMICOLON .)
    PRINT           reduce using rule 9 (statement -> expression SEMICOLON .)
    NUMBER          reduce using rule 9 (statement -> expression SEMICOLON .)
    TRUE            reduce using rule 9 (statement -> expression SEMICOLON .)
    FALSE           reduce using rule 9 (statement -> expression SEMICOLON .)
    LPAREN          reduce using rule 9 (statement -> expression SEMICOLON .)
    NOT             reduce using rule 9 (statement -> expression SEMICOLON .)
    MINUS           reduce using rule 9 (statement -> expression SEMICOLON .)
    LAMBDA          reduce using rule 9 (statement -> expression SEMICOLON .)
    $end            reduce using rule 9 (statement -> expression SEMICOLON .)
    RBRACE          reduce using rule 9 (statement -> expression SEMICOLON .)


state 26
